Fixed Cherry focus color in dark mode

--- a/TangerineUI-cherry.css
+++ b/TangerineUI-cherry.css
@@ -62,7 +62,7 @@
         --color-content-bg-focus: #0e0e0e;
 
         --color-accent: #d05c8a;
-        --color-accent-focus: #492936;
+        --color-accent-focus: #ad2862;
         --color-accent-lines: rgba(249, 122, 194, 0.3);
         --color-accent-bg: #3c1f2f;
         --color-accent-fg: #ffffff;
